chore: Clean up docs and various minor non-contract updates

--- a/notes/multiplier.tex
+++ b/notes/multiplier.tex
@@ -6,7 +6,7 @@
 \usepackage{multirow}
 
 \title{Sapien Staking Multiplier Model}
-\author{Sapien AI}
+\author{Chad Lynch, Sapien AI}
 \date{\today}
 
 \begin{document}
